--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 							<li><b>EMAIL : </b>mishraabhinav123@gmail.com</li>
 						</ul>
 						<ul class="social-icons">
-							<li><a href="#"><i class="ion-social-github"></i></a></li>
-							<li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-							<li><a href="#"><i class="ion-social-instagram"></i></a></li>
-							<li><a href="#"><i class="ion-social-facebook"></i></a></li>
-							<li><a href="#"><i class="ion-social-twitter"></i></a></li>
-							<li><a href="#"><i class="ion-social-reddit"></i></a></li>
+							<li><a href="https://github.com/abhibolega" target="_blank"><i class="ion-social-github"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/abhibolega/ target="_blank"><i class="ion-social-linkedin"></i></a></li>
+							<li><a href="https://www.instagram.com/abhibolega/ target="_blank"><i class="ion-social-instagram"></i></a></li>
+							<li><a href="https://facebook.com/abhibolega target="_blank"><i class="ion-social-facebook"></i></a></li>
+							<li><a href="https://twitter.com/abhibolega target="_blank"><i class="ion-social-twitter"></i></a></li>
+							<li><a href="https://www.reddit.com/user/abhibolega target="_blank"><i class="ion-social-reddit"></i></a></li>
 						</ul>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
@@ -222,6 +222,88 @@
 		</div><!-- container -->
 	</section><!-- educatiom -->
 
+		<section class="education-section">
+		<div class="container">
+		<div class="row">
+				<div class="col-sm-4">
+					<div class="heading2">
+						<h6 class="font-lite-black"><b>MOOCs & Other Courses</b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
+
+				<div class="experience margin-b-50">
+						<h4><b>The Complete Cryptocurrency Course: More than 5 Courses in 1 (Chris Haroun)</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
+						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
+						<p class="margin-tb-30">Credential ID:  -<br>
+							<a href="#">Credential Verification</a></p>
+					</div><!-- experience -->	
+				
+				<div class="experience margin-b-50">
+						<h4><b>Microsoft Excel - Excel from Beginner to Advanced (Kyle Pew)</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
+						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
+						<p class="margin-tb-30">Credential ID:  -<br>
+							<a href="#">Credential Verification</a></p>
+					</div><!-- experience -->	
+
+								<div class="experience margin-b-50">
+						<h4><b>Digital Marketing</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Internshala</h5>
+						<h6 class="margin-t-10">Date of Certification: March 2020</h6>
+						<p class="margin-tb-30">Credential ID:  69623BE2-6BA5-8A95-BF8B-77C003524813<br>
+							<a href="https://trainings.internshala.com/verify_certificate">Credential Verification</a></p>
+					</div><!-- experience -->
+
+
+				<div class="experience margin-b-50">
+						<h4><b>Learn Salesforce in Easy Steps (Parikshith Red)</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
+						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
+						<p class="margin-tb-30">Credential ID:  -<br>
+							<a href="#">Credential Verification</a></p>
+					</div><!-- experience -->		
+
+				<div class="experience margin-b-50">
+						<h4><b>Make your First EDM Track (Colin Warn)</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
+						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
+						<p class="margin-tb-30">Credential ID:  -<br>
+							<a href="#">Credential Verification</a></p>
+					</div><!-- experience -->		
+
+				<div class="experience margin-b-50">
+						<h4><b>Learn Web Development by Creating a Social Network (Pablo Farias Navarro)</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
+						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
+						<p class="margin-tb-30">Credential ID:  -<br>
+							<a href="#">Credential Verification</a></p>
+					</div><!-- experience -->		
+
+
+				<div class="experience margin-b-50">
+						<h4><b>AngularJS</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Internshala</h5>
+						<h6 class="margin-t-10">Date of Certification: February 2018</h6>
+						<p class="margin-tb-30">Credential ID:  7886156145a7fee91471eb<br>
+							<a href="https://trainings.internshala.com/verify_certificate">Credential Verification</a></p>
+					</div><!-- experience -->	
+
+				<div class="experience margin-b-50">
+						<h4><b>Web Development</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Internshala</h5>
+						<h6 class="margin-t-10">Date of Certification: July 2017</h6>
+						<p class="margin-tb-30">Credential ID: 6DC5CA2A-9D21-546D-7BA6-DCCF754D3564 <br>
+							<a href="https://trainings.internshala.com/verify_certificate">Credential Verification</a></p>
+					</div><!-- experience -->
+				
+
+				</div>	
+				</div><!-- col-sm-8 -->
+			</div>	
+	</section>
+
 		<section class="experience-section section">
 		<div class="container">
 			<div class="row">
@@ -248,7 +330,8 @@
 		</div><!-- container -->
 		
 	</section><!-- experience-section -->
-	
+
+
 	<section class="counter-section" id="counter">
 		<div class="container">
 			<div class="row">
