--- a/index.html
+++ b/index.html
@@ -319,10 +319,10 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 					<div class="experience margin-b-50">
 						
 						<ul class="list margin-b-30">
-							<li><a href="synopsis.pdf">Synopsis of my Project at Indian Institute of Petroleum</a></li>
-							<li><a href="hydrocracking_report_abhinavmishra.pdf">Hydrocracking of Vacuum Residue into Middle Distillates using Slurry Phase Technology</a></li>
-							<li><a href="#">Me as a Digital Artist</a></li>
-							<li><a href="#">Abhinav's Guide on Cryptocurrencies</a></li>
+							<li><a href="synopsis.pdf"  target="_blank">Synopsis of my Project at Indian Institute of Petroleum</a></li>
+							<li><a href="hydrocracking_report_abhinavmishra.pdf"  target="_blank">Hydrocracking of Vacuum Residue into Middle Distillates using Slurry Phase Technology</a></li>v
+							<li><a href="https://abhibolega.blogspot.com/p/me-as-digital-artist.html"  target="_blank">Me as a Digital Artist</a></li>
+							<li><a href="https://abhibolega.blogspot.com/p/cryptocurrency.html" target="_blank">Abhinav's Guide on Cryptocurrencies</a></li>
 						</ul>
 					</div><!-- experience -->
 				
