--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 				<div class="experience margin-b-50">
 						<h4><b>Microsoft Excel - Excel from Beginner to Advanced (Kyle Pew)</b></h4>
 						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
-						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
-						<p class="margin-tb-30">Credential ID:  -<br>
-							<a href="#">Credential Verification</a></p>
+						<h6 class="margin-t-10">Date of Certification: March 2020</h6>
+						<p class="margin-tb-30">Credential ID:  UC-d934fc7b-5a96-4bbb-93ab-ede5e02ffa37<br>
+							<a href="https://ude.my/UC-d934fc7b-5a96-4bbb-93ab-ede5e02ffa37" target="_blank">Credential Verification</a></p>
 					</div><!-- experience -->	
 
 								<div class="experience margin-b-50">
@@ -255,7 +255,7 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 						<h5 class="font-yellow">Issuing Authority: Internshala</h5>
 						<h6 class="margin-t-10">Date of Certification: March 2020</h6>
 						<p class="margin-tb-30">Credential ID:  69623BE2-6BA5-8A95-BF8B-77C003524813<br>
-							<a href="https://trainings.internshala.com/verify_certificate">Credential Verification</a></p>
+							<a href="https://trainings.internshala.com/verify_certificate" target="_blank">Credential Verification</a></p>
 					</div><!-- experience -->
 
 
@@ -270,9 +270,9 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 				<div class="experience margin-b-50">
 						<h4><b>Make your First EDM Track (Colin Warn)</b></h4>
 						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
-						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
-						<p class="margin-tb-30">Credential ID:  -<br>
-							<a href="#">Credential Verification</a></p>
+						<h6 class="margin-t-10">Date of Certification: March 2020</h6>
+						<p class="margin-tb-30">Credential ID:  UC-0be0cd15-ae00-49f9-9c10-5abd9e86e92c<br>
+							<a href="https://ude.my/UC-0be0cd15-ae00-49f9-9c10-5abd9e86e92c" target="_blank">Credential Verification</a></p>
 					</div><!-- experience -->		
 
 				<div class="experience margin-b-50">
@@ -289,7 +289,7 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 						<h5 class="font-yellow">Issuing Authority: Internshala</h5>
 						<h6 class="margin-t-10">Date of Certification: February 2018</h6>
 						<p class="margin-tb-30">Credential ID:  7886156145a7fee91471eb<br>
-							<a href="https://trainings.internshala.com/verify_certificate">Credential Verification</a></p>
+							<a href="https://trainings.internshala.com/verify_certificate" target="_blank">Credential Verification</a></p>
 					</div><!-- experience -->	
 
 				<div class="experience margin-b-50">
@@ -297,7 +297,7 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 						<h5 class="font-yellow">Issuing Authority: Internshala</h5>
 						<h6 class="margin-t-10">Date of Certification: July 2017</h6>
 						<p class="margin-tb-30">Credential ID: 6DC5CA2A-9D21-546D-7BA6-DCCF754D3564 <br>
-							<a href="https://trainings.internshala.com/verify_certificate">Credential Verification</a></p>
+							<a href="https://trainings.internshala.com/verify_certificate" target="_blank">Credential Verification</a></p>
 					</div><!-- experience -->
 				
 
