--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
+	<meta name="author" content="Abhinav Mishra">
+	<meta name="keywords" content="Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
 	<meta content='Hey There! I am an Engineer. I did my schooling from Patna, India, and graduation from Patiala, India. My current fields of interest are Alternate Fuels and Different aspects of Cryptocurrency. ' name='description'/>
 	<link rel="icon" type="image/png" href="favicon.png">
 	
