--- a/index.html
+++ b/index.html
@@ -238,6 +238,14 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 				<div class="col-sm-8">
 
 				<div class="experience margin-b-50">
+						<h4><b>Applied Cryptography</b></h4>
+						<h5 class="font-yellow">Issuing Authority: Udacity</h5>
+						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
+						<p class="margin-tb-30">Credential ID:  -<br>
+							<a href="#">Credential Verification</a></p>
+					</div><!-- experience -->
+
+				<div class="experience margin-b-50">
 						<h4><b>The Complete Cryptocurrency Course: More than 5 Courses in 1 (Chris Haroun)</b></h4>
 						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
 						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
