--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<p class="margin-b-50">Hey There!<br>
 						I am an Engineer. I did my schooling from Patna, India, and graduation from Patiala, India. <br><br>
 						My current fields of interest are Alternate Fuels and Different aspects of Cryptocurrency. I freelance different activities like graphic designing, web development & its digital marketing under the title '<a href="https://abhibolega.blogspot.com/p/freelancing.html" target="_blank">abhibolega</a>'. <br><br>
-						I also like playing music on the keyboard, guitar, and flute and I am interested in making creative content. Apart from this I am quite interested in sports (cricket and football) and love to learn about different aspects of the environment. When I do nothing, I try writing about things I know which can be found on my blog.  
+						I also like playing music on the keyboard and guitar, and I am interested in making creative content. Apart from this I am quite interested in sports (cricket and football) and love to learn about different aspects of the environment. When I do nothing, I try writing about things I know which can be found on my blog.  
 
 					</p>
 					
@@ -192,7 +192,7 @@
 							<h5 class="font-yellow"><b>Thapar Institute of Engineering & Technology, Patiala</b></h5>
 							<h6 class="font-lite-black margin-t-10">To Graduate in 2020(4 Years)</h6>
 							<p class="margin-tb-30">I am pursuing my engineering from this institute where I have done 18 Core Engineering Subjects and 4 Mathematics Subjects (M1, M2, Optimization Techniques and Numerical Analysis), Applied Physics and Chemistry.
-Apart from these, I have done subjects like Engineering Drawing, Basic Programming using C++ and JAVA, Energy and Environment, Manufacturing Processes, Engineering Mechanics, Electrical and Electronics Engineering, Thermo-Fluids, Material Sciences, Solids and Structures, Innovation and Entrepreneurship, and, Communication Skills and Humanities for Engineers. Apart from academics I have made projects and have participated in different Technical Fests at different Colleges. I have worked for different clubs and societies and have handled different events.  </p>
+Apart from these, I have done subjects like Engineering Drawing, Basic Programming using C++ and JAVA, Energy and Environment, Manufacturing Processes, Engineering Mechanics, Electrical and Electronics Engineering, Thermo-Fluids, Material Sciences, Solids and Structures, Innovation and Entrepreneurship, and, Communication Skills and Humanities for Engineers. I studies Polymer Sciences and Petroleum and Petrochemicals as my Elective Subjects. Apart from academics I have made projects and have participated in different Technical Fests at different Colleges. I have worked for different clubs and societies and have handled different events.  </p>
 						</div><!-- education -->
 						
 						<div class="education margin-b-50">
