--- a/listingo/index.html
+++ b/listingo/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slicknav.css">
+    <link rel="stylesheet" href="css/custom-css.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
 
     <link rel="stylesheet" href="css/style.css">
@@ -100,19 +101,13 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-xl-10">
                         <div class="slider_text text-center justify-content-center">
-                            <p>Find Nearby Attraction</p>
-                            <h3>Find Nearby Attraction</h3>
+                            <h3>Find Your Series</h3>
                             <div class="search_form">
                                 <form action="#">
                                     <div class="row align-items-center">
-                                        <div class="col-xl-5 col-md-4">
+                                        <div class="col-xl-9 col-md-8">
                                             <div class="input_field">
-                                                <input type="text" placeholder="What are you finding?">
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-4 col-md-4">
-                                            <div class="input_field location">
-                                                <input type="text" placeholder="Location">
+                                                <input type="text" placeholder="What do you want to watch?">
                                             </div>
                                         </div>
                                         <div class="col-xl-3 col-md-4">
@@ -124,6 +119,7 @@
                                 </form>
                             </div>
                             <div class="quality">
+                                <h4 class="popular_searches">Popular Searches</h4>
                                 <ul>
                                     <li>
                                         <button>Hotel</button>
