--- a/listingo/Listings.html
+++ b/listingo/Listings.html
@@ -101,18 +101,13 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-xl-10">
                         <div class="slider_text text-center justify-content-center">
-                            <h3>Our Listings</h3>
+                            <h3>Find Your Show</h3>
                             <div class="search_form">
                                 <form action="#">
                                     <div class="row align-items-center">
-                                        <div class="col-xl-5 col-md-4">
+                                        <div class="col-xl-9 col-md-8">
                                             <div class="input_field">
-                                                <input type="text" placeholder="What are you finding?">
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-4 col-md-4">
-                                            <div class="input_field location">
-                                                <input type="text" placeholder="Location">
+                                                <input type="text" placeholder="What do you want to watch?">
                                             </div>
                                         </div>
                                         <div class="col-xl-3 col-md-4">
