--- a/listingo/Listings.html
+++ b/listingo/Listings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Directory</title>
+    <title>Find Your Show</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -134,9 +134,9 @@
                                                 <h3><a href="single_listings.html">Saintmartine</a></h3>
                                                 <p>700/D, Kings road, Green lane, London</p>
                                                 <ul>
-                                                    <li> <i class="fa fa-phone"></i>
+                                                    <li> <i class="fa fa-imdb"></i>
                                                         +10 278 367 9823</li>
-                                                    <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                                    <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -155,9 +155,9 @@
                                                 <h3><a href="single_listings.html">Freshly Food</a></h3>
                                                 <p>700/D, Kings road, Green lane, London</p>
                                                 <ul>
-                                                    <li> <i class="fa fa-phone"></i>
+                                                    <li> <i class="fa fa-imdb"></i>
                                                         +10 278 367 9823</li>
-                                                    <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                                    <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -176,9 +176,9 @@
                                                 <h3><a href="single_listings.html">Midnight</a></h3>
                                                 <p>700/D, Kings road, Green lane, London</p>
                                                 <ul>
-                                                    <li> <i class="fa fa-phone"></i>
+                                                    <li> <i class="fa fa-imdb"></i>
                                                         +10 278 367 9823</li>
-                                                    <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                                    <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -197,9 +197,9 @@
                                                 <h3><a href="single_listings.html">Barber</a></h3>
                                                 <p>700/D, Kings road, Green lane, London</p>
                                                 <ul>
-                                                    <li> <i class="fa fa-phone"></i>
+                                                    <li> <i class="fa fa-imdb"></i>
                                                         +10 278 367 9823</li>
-                                                    <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                                    <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -218,9 +218,9 @@
                                                 <h3><a href="single_listings.html">Montana Resort</a></h3>
                                                 <p>700/D, Kings road, Green lane, London</p>
                                                 <ul>
-                                                    <li> <i class="fa fa-phone"></i>
+                                                    <li> <i class="fa fa-imdb"></i>
                                                         +10 278 367 9823</li>
-                                                    <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                                    <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -239,9 +239,9 @@
                                                 <h3><a href="single_listings.html">Yelled Shopping</a></h3>
                                                 <p>700/D, Kings road, Green lane, London</p>
                                                 <ul>
-                                                    <li> <i class="fa fa-phone"></i>
+                                                    <li> <i class="fa fa-imdb"></i>
                                                         +10 278 367 9823</li>
-                                                    <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                                    <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                                 </ul>
                                             </div>
                                         </div>
