--- a/listingo/index.html
+++ b/listingo/index.html
@@ -277,9 +277,9 @@
                                         <h3><a href="single_listings.html">Money Heist</a></h3>
                                         <p>Avaiable on: Netflix</p>
                                         <ul>
-                                            <li> <i class="fa fa-phone"></i>
+                                            <li> <i class="fa fa-imdb"></i>
                                                 IMDB rating: x.x</li>
-                                            <li><i class="fa fa-envelope"></i> Genre: xx</li>
+                                            <li><i class="fa fa-film"></i> Genre: xx</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -298,9 +298,9 @@
                                         <h3><a href="single_listings.html">Saintmartine</a></h3>
                                         <p>700/D, Kings road, Green lane, London</p>
                                         <ul>
-                                            <li> <i class="fa fa-phone"></i>
+                                            <li> <i class="fa fa-imdb"></i>
                                                 +10 278 367 9823</li>
-                                            <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                            <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -319,9 +319,9 @@
                                         <h3><a href="single_listings.html">Saintmartine</a></h3>
                                         <p>700/D, Kings road, Green lane, London</p>
                                         <ul>
-                                            <li> <i class="fa fa-phone"></i>
+                                            <li> <i class="fa fa-imdb"></i>
                                                 +10 278 367 9823</li>
-                                            <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                            <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -340,9 +340,9 @@
                                         <h3><a href="single_listings.html">Saintmartine</a></h3>
                                         <p>700/D, Kings road, Green lane, London</p>
                                         <ul>
-                                            <li> <i class="fa fa-phone"></i>
+                                            <li> <i class="fa fa-imdb"></i>
                                                 +10 278 367 9823</li>
-                                            <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                            <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -361,9 +361,9 @@
                                         <h3><a href="single_listings.html">Saintmartine</a></h3>
                                         <p>700/D, Kings road, Green lane, London</p>
                                         <ul>
-                                            <li> <i class="fa fa-phone"></i>
+                                            <li> <i class="fa fa-imdb"></i>
                                                 +10 278 367 9823</li>
-                                            <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                            <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -382,9 +382,9 @@
                                         <h3><a href="single_listings.html">Saintmartine</a></h3>
                                         <p>700/D, Kings road, Green lane, London</p>
                                         <ul>
-                                            <li> <i class="fa fa-phone"></i>
+                                            <li> <i class="fa fa-imdb"></i>
                                                 +10 278 367 9823</li>
-                                            <li><i class="fa fa-envelope"></i> contact@midnight.com</li>
+                                            <li><i class="fa fa-film"></i> contact@midnight.com</li>
                                         </ul>
                                     </div>
                                 </div>
