--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 				<div class="experience margin-b-50">
 						<h4><b>The Complete Cryptocurrency Course: More than 5 Courses in 1 (Chris Haroun)</b></h4>
 						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
-						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
-						<p class="margin-tb-30">Credential ID:  -<br>
-							<a href="#">Credential Verification</a></p>
+						<h6 class="margin-t-10">Date of Certification: April 2020</h6>
+						<p class="margin-tb-30">Credential ID:  UC-9aa0b1b9-1c02-40b8-b409-0a520d0331b4<br>
+							<a href="https://ude.my/UC-9aa0b1b9-1c02-40b8-b409-0a520d0331b4">Credential Verification</a></p>
 					</div><!-- experience -->	
 				
 				<div class="experience margin-b-50">
@@ -277,15 +277,7 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 						<p class="margin-tb-30">Credential ID:  69623BE2-6BA5-8A95-BF8B-77C003524813<br>
 							<a href="https://trainings.internshala.com/verify_certificate" target="_blank">Credential Verification</a></p>
 					</div><!-- experience -->
-
-
-				<div class="experience margin-b-50">
-						<h4><b>Learn Salesforce in Easy Steps (Parikshith Red)</b></h4>
-						<h5 class="font-yellow">Issuing Authority: Udemy</h5>
-						<h6 class="margin-t-10">Date of Certification: Ongoing</h6>
-						<p class="margin-tb-30">Credential ID:  -<br>
-							<a href="#">Credential Verification</a></p>
-					</div><!-- experience -->		
+	
 
 				<div class="experience margin-b-50">
 						<h4><b>Make your First EDM Track (Colin Warn)</b></h4>
