--- a/projects/index.html
+++ b/projects/index.html
@@ -103,7 +103,7 @@
 		</section>
 
 <!-- Footer -->
-		<footer>© 2020 <a href="..">abhibolega</a></footer>
+		<footer>© <a href="..">abhibolega</a></footer>
 	</div>	
 </body>
 </html>
