--- a/projects/index.html
+++ b/projects/index.html
@@ -67,6 +67,22 @@
 		.backlink a:click {
 			color: #fff;
 		}
+
+		@media only screen and (max-width: 600px) {
+
+		  .heading {
+		  	text-align: center;
+		  }
+
+		  .backlink {
+		  	float: left;
+		  	width: 100%;
+		  	background:  #40B3A2;
+		  	padding-top: 0.5em;
+		  	padding-bottom: 0.5em;
+		  	border-radius: 0.3em;
+		  }
+		  }
 	</style>
 	<title>Projects by abhibolega</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
