--- a/projects/index.html
+++ b/projects/index.html
@@ -125,13 +125,13 @@
 		<section>
 			<div>
 				<h2>McCabe-Thiele Plot</h2>
-				<img src="images/mccabe.png" class="thumbnail">
+				<img src="../..images/mccabe.png" class="thumbnail">
 				<p>Made on an Excel spreadsheet, this plot draws the McCabe-Thiele plot when provided with the VLE data and other essential Parameters.</p>
 				<label>Version 0.0.0.1 (beta) </label><br><a href="mccabethiele_0.0.0.1_betass.xlsm"><button>Download</button></a>
 			</div>
 			<div>
 				<h2>Linear Interpolation</h2>
-				<img src="images/linear.png" class="thumbnail">
+				<img src="../..images/linear.png" class="thumbnail">
 				<p>A very simple but useful Excel based project to calculate value corresponding to other value using Linear Interpolation.</p>
 				<label>Final Version </label><br><a href="linearinterpolation.xlsm"><button>Download</button></a>
 			</div>
