--- a/projects/index.html
+++ b/projects/index.html
@@ -28,6 +28,8 @@
 			color: #fff;
 		}
 
+
+
 		footer {
 			background: #212121;
 			margin-top: 5em;
@@ -84,11 +86,21 @@
 			padding: 0.8em 1.1em;
 		}
 
+		.project {
+			margin: 2em;
+			border: 2px solid blue;
+		}
+
+	/* Mobile Screen Optimization */
 
 		@media only screen and (max-width: 600px) {
 
 		  .heading {
 		  	text-align: center;
+		  }
+
+		  section {
+		  	margin-top: 5em;
 		  }
 
 		  .backlink {
@@ -123,13 +135,13 @@
 
 <!-- Contents of the Page -->
 		<section>
-			<div>
+			<div id="project" class="project">
 				<h2>McCabe-Thiele Plot</h2>
 				<img src="images/mccabe.png" class="thumbnail">
 				<p>Made on an Excel spreadsheet, this plot draws the McCabe-Thiele plot when provided with the VLE data and other essential Parameters.</p>
 				<label>Version 0.0.0.1 (beta) </label><br><a href="mccabethiele_0.0.0.1_betass.xlsm"><button>Download</button></a>
 			</div>
-			<div>
+			<div id="project" class="project">
 				<h2>Linear Interpolation</h2>
 				<img src="images/linear.png" class="thumbnail">
 				<p>A very simple but useful Excel based project to calculate value corresponding to other value using Linear Interpolation.</p>
