--- a/projects/index.html
+++ b/projects/index.html
@@ -72,7 +72,9 @@
 
 		.thumbnail {
 			height: 10em;
-			width: 12em;
+			width: 16em;
+			display: block;
+			border: 0.2em solid grey;
 		}
 
 		button {
@@ -88,7 +90,18 @@
 
 		.project {
 			margin: 2em;
-			border: 2px solid blue;
+			box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+			background: #fcfcfc;
+		}
+
+		.project label {
+			padding: 0.75em;
+			font-weight: bold;
+		}
+
+		.project p {
+			padding: 0 1em 0 1em;
+			text-align: justify;
 		}
 
 	/* Mobile Screen Optimization */
@@ -101,6 +114,15 @@
 
 		  section {
 		  	margin-top: 5em;
+		  }
+
+		  .thumbnail {
+			margin-left: auto;
+			margin-right: auto;
+		  }
+
+		  .project h2 {
+		  	padding: 0.7em 0.7em 0em 0.7em;
 		  }
 
 		  .backlink {
