--- a/projects/index.html
+++ b/projects/index.html
@@ -100,7 +100,7 @@
 		}
 
 		.project p {
-			padding: 0 1em 0 1em;
+			padding: 0 0.7em 0 0.7em;
 			text-align: justify;
 		}
 
@@ -124,6 +124,11 @@
 		  .project h2 {
 		  	padding: 0.7em 0.7em 0em 0.7em;
 		  }
+
+		  .project p {
+			padding: 0 1em 0 1em;
+			text-align: justify;
+		}
 
 		  .backlink {
 		  	float: left;
