--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" type="image/png" href="favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
@@ -9,6 +10,16 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <title>Page not found</title>
   <style type="text/css">
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+
+    html {
+      margin: 0;
+    }
+
+
     .main{
   margin-top: 15%;
 }
