--- a/projects/index.html
+++ b/projects/index.html
@@ -21,7 +21,7 @@
 		}
 
 		nav {
-			background: #40B3A2;
+			background: #18454A;
 			padding-bottom: 0.5em;
 			padding-left: 1em;
 			padding-right: 1em;
@@ -84,7 +84,7 @@
 			outline: none;
 			color: #fff;
 			font-weight: bold;
-			background:  #40B3A2;
+			background:  #18454A;
 			border-radius: 0.5em;
 			border: none;
 			padding: 0.8em 1.1em;
@@ -140,7 +140,7 @@
 		  .backlink {
 		  	float: left;
 		  	width: 100%;
-		  	background:  #40B3A2;
+		  	background:  #18454A;
 		  	padding-top: 0.5em;
 		  	padding-bottom: 0.5em;
 		  	border-radius: 0.3em;
