--- a/projects/index.html
+++ b/projects/index.html
@@ -146,8 +146,50 @@
 		  	border-radius: 0.3em;
 		  }
 		  }
+
+		  @media only screen and (max-width: 320px) {
+
+		  .heading {
+		  	text-align: center;
+		  }
+
+		  section {
+		  	margin-top: 5em;
+		  }
+
+		  .thumbnail {
+			margin-left: auto;
+			margin-right: auto;
+		  }
+
+		  .project h2 {
+		  	padding: 0.7em 0.7em 0em 0.7em;
+		  }
+
+		  .project p {
+			padding: 0 1em 0 1em;
+			text-align: justify;
+		}
+
+		  .thumbnail {
+		  	height: 8em;
+		  	width: 12em;
+		  }
+
+		  .backlink {
+		  	float: left;
+		  	width: 100%;
+		  	background:  #18454A;
+		  	padding-top: 0.5em;
+		  	padding-bottom: 0.5em;
+		  	border-radius: 0.3em;
+		  }
+		  }
 	</style>
 	<title>Projects by abhibolega</title>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162665823-1"></script>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
