--- a/projects/index.html
+++ b/projects/index.html
@@ -187,12 +187,13 @@
 		  }
 	</style>
 	<title>Projects by abhibolega</title>
-	
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162665823-1"></script>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
+	<meta name="theme-color" content="#18454A">
 	<meta name="author" content="Abhinav Mishra">
 	<meta name="keywords" content="Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
 	<meta content='Projects by <a href="https://abhibolega.github.io">abhibolega</a>, a page to showcase the different projects and other things I make.' name='description'/>
@@ -213,7 +214,7 @@
 		<section>
 			<div id="project" class="project">
 				<h2>McCabe-Thiele Plot</h2>
-				<div class="thumb"><img src="mccabe.png" class="thumbnail"></div>
+				<div class="thumb"><img src="mccabe.PNG" class="thumbnail"></div>
 				<div class="content">
 					<p>Made on an Excel spreadsheet, this plot draws the McCabe-Thiele plot when provided with the VLE data and other essential Parameters.</p>
 					<label>Version 0.0.0.1 (beta) </label><br><a href="mccabethiele_0.0.0.1_betass.xlsm"><button>Download</button></a>
@@ -221,7 +222,7 @@
 			</div>
 			<div id="project" class="project">
 				<h2>Linear Interpolation</h2>
-				<img src="linear.png" class="thumbnail">
+				<img src="linear.PNG" class="thumbnail">
 				<div class="content">
 					<p>A very simple but useful Excel based project to calculate value corresponding to other value using Linear Interpolation.</p>
 					<label>Final Version </label><br><a href="linearinterpolation.xlsm"><button>Download</button></a>
