--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	  gtag('config', 'UA-162665823-1');
 	</script>
 	<title>Abhinav Mishra</title>
+	<meta name="theme-color" content="#18454A">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
