--- a/projects/index.html
+++ b/projects/index.html
@@ -212,7 +212,7 @@
 
 <!-- Contents of the Page -->
 		<section>
-			<div id="project" class="project">
+			<div class="project">
 				<h2>McCabe-Thiele Plot</h2>
 				<div class="thumb"><img src="mccabe.PNG" class="thumbnail"></div>
 				<div class="content">
@@ -220,7 +220,7 @@
 					<label>Version 0.0.0.1 (beta) </label><br><a href="mccabethiele_0.0.0.1_betass.xlsm"><button>Download</button></a>
 				</div>
 			</div>
-			<div id="project" class="project">
+			<div class="project">
 				<h2>Linear Interpolation</h2>
 				<img src="linear.PNG" class="thumbnail">
 				<div class="content">
