--- a/projects/index.html
+++ b/projects/index.html
@@ -136,6 +136,13 @@
 		  	text-align: center;
 		  }
 
+		  .searchbox {
+		  	width: 16rem;
+		  	margin-left: 1rem;
+		  	margin-right: 1rem;
+		  	margin-top: 0.5rem;
+		  }
+
 		  section {
 		  	margin-top: 5em;
 		  }
