--- a/projects/index.html
+++ b/projects/index.html
@@ -230,7 +230,7 @@
 		<nav>
 			<div class="heading">
 				Projects by&nbsp &nbsp<font style="font-size: 2em;" face="khand">abhibolega</font>
-				<input type="text" class="searchbox" id="searchbox" placeholder="Search Project...">
+				<input type="text" class="searchbox" id="searchbox" placeholder="Search Project">
 				<h3 class="backlink"><a href=".."> ◄ Back to my Website</a></h3>
 			</div>	
 		</nav>	
