--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,7 @@
   			src: url(khand.ttf);
 		}
 
+
 		html {
 			width: 100%;
 			padding: 0;
@@ -28,10 +29,13 @@
 			color: #fff;
 		}
 
+		.container {
+			height: 100%;
+		}
+
 
 		footer {
 			background: #212121;
-			margin-top: 5em;
   			bottom: 0;
   			width: 100%;
   			height: 2em;
@@ -110,17 +114,25 @@
 			text-align: justify;
 		}
 
+		.description {
+			margin-top: 5em;
+			background: #40b3a2;
+			color: #fff;
+			padding: 4rem;
+		}
+
 		.searchbox {
+			font-weight: bold;
 			margin-left: 8rem;
 			outline: none;
 			border: none;
 			font-size: 1rem;
 			color: #fff;
 			width: 30rem;
-			padding: 0.8rem 1.5rem 0.8rem 1.5rem;
+			padding: 1rem 1.5rem 0.8rem 1.5rem;
 			background: #275f66;
 			outline: none;
-			border-radius: 1rem;
+			border-radius: 0.5rem;
 		}
 
 		.searchbox::placeholder {
@@ -260,6 +272,11 @@
 					<label>Final Version </label><br><a href="linearinterpolation.xlsm"><button>Download</button></a>
 				</div>
 			</div>
+		</section>
+		<section class="description">
+			<b>Projects by <font face="khand">abhibolega</font>, a section of my website where I list all the useful small projects which can be used by anyone for free. If you wish, you can donate and support my work. If you want the raw files (to modify my projects for personal use), contact me using my blog.</b><br><br><br>
+			<center><img src="../qr.JPEG" height="200rem"></center>
+
 		</section>
 
 <!-- Footer -->
