--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta name="author" content="Abhinav Mishra">
-  <meta name="keywords" content="Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
+  <meta name="keywords" content="abhibolega, Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
   <link rel="icon" type="image/png" href="favicon.png">
   <title>Page not found</title>
   <style type="text/css">
