--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<meta name="author" content="Abhinav Mishra">
-	<meta name="keywords" content="Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
+	<meta name="keywords" content="abhibolega, Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
 	<meta content='Hey There! I am an Engineer. I did my schooling from Patna, India, and graduation from Patiala, India. My current fields of interest are Alternate Fuels and Different aspects of Cryptocurrency. ' name='description'/>
 	<link rel="icon" type="image/png" href="favicon.png">
 	
