--- a/projects/index.html
+++ b/projects/index.html
@@ -238,7 +238,7 @@
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#18454A">
 	<meta name="author" content="Abhinav Mishra">
-	<meta name="keywords" content="Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
+	<meta name="keywords" content="abhibolega, Abhinav, Mishra, Engineer, Freelancer, Thapar, India">
 	<meta content='Projects by <a href="https://abhibolega.github.io">abhibolega</a>, a page to showcase the different projects and other things I make.' name='description'/>
 	<link rel="icon" type="image/png" href="../favicon.png">
 </head>
