--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<h2><b>Abhinav Mishra</b></h2>
 						<h4 class="font-yellow">Engineering Student, Amateur Artist</h4>
 						<ul class="information margin-tb-30">
-							<li><b>BORN : </b>June 25, 1998</li>
+							<li><b>BORN : </b>May 26, 1998</li>
 							<li><b>EMAIL : </b><a href="mailto:mishraabhinav123@gmail.com">mishraabhinav123@gmail.com</a></li>
 						</ul>
 						<ul class="social-icons">
@@ -114,7 +114,6 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>About me</b></h3>
-						<h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
@@ -319,12 +318,101 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 			</div>	
 	</section>
 
+		<section class="portfolio-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Sample Design</b></h3>
+						<h6 class="font-lite-black"><b>Some of My Designs made on Photoshop and Illustrator</b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
+					<div class="portfolioFilter clearfix margin-b-80">
+						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
+						<a href="#" data-filter=".web-design"><b>PHOTOSHOP</b></a>
+						<a href="#" data-filter=".branding"><b>ILLUSTRATOR</b></a>
+						<a href="#" data-filter=".graphic-design"><b>CLOSE</b></a>
+					</div><!-- portfolioFilter -->
+				</div><!-- col-sm-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
+		
+		<div style="width: 90%; margin: auto;" class="portfolioContainer">
+			
+			<div class="p-item web-design">
+				<a href="designs/beckham.JPG" data-fluidbox>
+					<img src="designs/beckham.JPG" alt=""></a>
+			</div><!-- p-item -->
+			
+			<div class="p-item branding">
+				<a href="designs/taj.JPG" data-fluidbox>
+					<img src="designs/taj.JPG" alt=""></a>
+			</div><!-- p-item -->
+			
+			<div class="p-item web-design">
+				<a href="designs/thela.JPG" data-fluidbox>
+					<img src="designs/thela.JPG" alt=""></a>
+			</div><!-- p-item -->
+			
+			
+			<div class="p-item branding">
+				<a href="designs/india.JPG" data-fluidbox>
+					<img src="designs/india.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+			<div class="p-item branding">
+				<a href="designs/ayushman.JPG" data-fluidbox>
+					<img src="designs/ayushman.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+						<div class="p-item branding">
+				<a href="designs/joker.JPG" data-fluidbox>
+					<img src="designs/joker.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+						<div class="p-item branding">
+				<a href="designs/simp.JPG" data-fluidbox>
+					<img src="designs/simp.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+			<div class="p-item web-design">
+				<a href="designs/derklassiker.JPG" data-fluidbox>
+					<img src="designs/derklassiker.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+			<div class="p-item web-design">
+				<a href="designs/salah.JPG" data-fluidbox>
+					<img src="designs/salah.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+			<div class="p-item web-design">
+				<a href="designs/jeetu.JPG" data-fluidbox>
+					<img src="designs/jeetu.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+			<div class="p-item web-design">
+				<a href="designs/dhoni2.JPG" data-fluidbox>
+					<img src="designs/dhoni2.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+			<div class="p-item web-design">
+				<a href="designs/ipl.JPG" data-fluidbox>
+					<img src="designs/ipl.JPG" alt=""></a>
+			</div><!-- p-item -->
+
+
+					
+		</div><!-- portfolioContainer -->
+		
+	</section><!-- portfolio-section -->
+<br>
 		<section class="experience-section section">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>Things which might Interest You</b></h3>
+						<h3><b>Things that might Interest You</b></h3>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
