--- a/index.html
+++ b/index.html
@@ -341,64 +341,64 @@ Apart from these, I have done subjects like Engineering Drawing, Basic Programmi
 		<div style="width: 90%; margin: auto;" class="portfolioContainer">
 			
 			<div class="p-item web-design">
-				<a href="designs/beckham.JPG" data-fluidbox>
-					<img src="designs/beckham.JPG" alt=""></a>
+				<a href="designs/beckham.jpg" data-fluidbox>
+					<img src="designs/beckham.jpg" alt=""></a>
 			</div><!-- p-item -->
 			
 			<div class="p-item branding">
-				<a href="designs/taj.JPG" data-fluidbox>
-					<img src="designs/taj.JPG" alt=""></a>
+				<a href="designs/taj.jpg" data-fluidbox>
+					<img src="designs/taj.jpg" alt=""></a>
 			</div><!-- p-item -->
 			
 			<div class="p-item web-design">
-				<a href="designs/thela.JPG" data-fluidbox>
-					<img src="designs/thela.JPG" alt=""></a>
+				<a href="designs/thela.jpg" data-fluidbox>
+					<img src="designs/thela.jpg" alt=""></a>
 			</div><!-- p-item -->
 			
 			
 			<div class="p-item branding">
-				<a href="designs/india.JPG" data-fluidbox>
-					<img src="designs/india.JPG" alt=""></a>
+				<a href="designs/india.jpg" data-fluidbox>
+					<img src="designs/india.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 			<div class="p-item branding">
-				<a href="designs/ayushman.JPG" data-fluidbox>
-					<img src="designs/ayushman.JPG" alt=""></a>
+				<a href="designs/ayushman.jpg" data-fluidbox>
+					<img src="designs/ayushman.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 						<div class="p-item branding">
-				<a href="designs/joker.JPG" data-fluidbox>
-					<img src="designs/joker.JPG" alt=""></a>
+				<a href="designs/joker.jpg" data-fluidbox>
+					<img src="designs/joker.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 						<div class="p-item branding">
-				<a href="designs/simp.JPG" data-fluidbox>
-					<img src="designs/simp.JPG" alt=""></a>
+				<a href="designs/simp.jpg" data-fluidbox>
+					<img src="designs/simp.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 			<div class="p-item web-design">
-				<a href="designs/derklassiker.JPG" data-fluidbox>
-					<img src="designs/derklassiker.JPG" alt=""></a>
+				<a href="designs/derklassiker.jpg" data-fluidbox>
+					<img src="designs/derklassiker.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 			<div class="p-item web-design">
-				<a href="designs/salah.JPG" data-fluidbox>
-					<img src="designs/salah.JPG" alt=""></a>
+				<a href="designs/salah.jpg" data-fluidbox>
+					<img src="designs/salah.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 			<div class="p-item web-design">
-				<a href="designs/jeetu.JPG" data-fluidbox>
-					<img src="designs/jeetu.JPG" alt=""></a>
+				<a href="designs/jeetu.jpg" data-fluidbox>
+					<img src="designs/jeetu.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 			<div class="p-item web-design">
-				<a href="designs/dhoni2.JPG" data-fluidbox>
-					<img src="designs/dhoni2.JPG" alt=""></a>
+				<a href="designs/dhoni2.jpg" data-fluidbox>
+					<img src="designs/dhoni2.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 			<div class="p-item web-design">
-				<a href="designs/ipl.JPG" data-fluidbox>
-					<img src="designs/ipl.JPG" alt=""></a>
+				<a href="designs/ipl.jpg" data-fluidbox>
+					<img src="designs/ipl.jpg" alt=""></a>
 			</div><!-- p-item -->
 
 
