--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>Work Experience</b></h3>
-						<h6 class="font-lite-black"><b>Internships and Other Experiences</b></h6>
+						<h6 style="color: #fff;" class="font-lite-black"><b>Internships and Other Experiences</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
