--- a/projects/index.html
+++ b/projects/index.html
@@ -233,6 +233,7 @@
 
 	  gtag('config', 'UA-162665823-1');
 	</script>
+	<meta property="og:image" content="../dp1.jpg" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
